--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,6 @@
     "@craco/craco": "^5.7.0",
     "@semantic-ui-react/craco-less": "^1.2.1",
     "semantic-ui-less": "^2.4.1"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
