--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "server": "npm start",
+    "start": "node server",
+    "watch": "nodemon server",
+    "build": "cd client/ && npm install && npm run build",
     "client": "cd ../client && npm start",
-    "concurrently": "concurrently \"npm run server\" \"npm run client\""
+    "concurrently": "concurrently \"npm run watch\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
