--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-player": "^2.6.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "semantic-ui-react": "^2.0.1",
+    "@craco/craco": "^5.7.0",
+    "@semantic-ui-react/craco-less": "^1.2.1",
+    "semantic-ui-less": "^2.4.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^7.1.2",
@@ -10,13 +21,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.21.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-player": "^2.6.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
-    "semantic-ui-react": "^2.0.1"
+    "msw": "^0.21.3"
   },
   "scripts": {
     "start": "craco start",
@@ -35,11 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@craco/craco": "^5.7.0",
-    "@semantic-ui-react/craco-less": "^1.2.1",
-    "semantic-ui-less": "^2.4.1"
   },
   "proxy": "http://localhost:5000/"
 }
