--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "aws-sdk": "^2.843.0",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,7 +29,8 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "redis": "^3.0.2"
   },
   "engines": {
     "node": "14.3"
